:art: fix z-index navbar

--- a/src/components/Navbar/Objects/FullMenu.css
+++ b/src/components/Navbar/Objects/FullMenu.css
@@ -5,7 +5,7 @@
   width: 300px;
   height: 100vh;
   background-color: black;
-  /* z-index: 999; */
+  z-index: 950;
   animation: slideRight 1s;
 }
 
